[project]
name = "goonfetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "textual-image>=0.8.5",
]
